DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2007-07-08 patrick     Debug-enabled code linked against the release runtime
                       on Windows is now named the same as optimized code.
                       The debug DLLs are installed in the "debug"
                       subdirectory.
                       NEW VERSION: 1.3.2
2007-06-26 patrick     Changed the preprocessor identification of debug versus
                       optimized to look for TWEEK_DEBUG or JUGGLER_DEBUG
                       instead of _DEBUG (and TWEEK_OPT or JUGGLER_OPT instead
                       of _OPT).
                       NEW VERSION: 1.3.1
2007-04-18 patrick     VR Juggler 2.2 branch created.
                       NEW VERSION: 1.3.0