@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2007-09-04 patrick     Use new environment variable TWEEK_DATA_DIR as a way to
+                       look up files in TWEEK_BASE_DIR/share/tweek.
+                       NEW VERSION: 1.3.3
+2007-09-04 patrick     Set TWEEK_BASE_DIR automatically on all platforms.
 2007-07-08 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
